--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "@hookform/resolvers": "2.9.5",
         "@mui/base": "5.0.0-alpha.89",
         "@mui/icons-material": "5.8.4",
-        "@mui/x-date-pickers": "5.0.0-beta.0",
         "@mui/lab": "5.0.0-alpha.90",
         "@mui/material": "5.9.0",
         "@mui/styles": "5.9.0",
         "@mui/system": "5.9.0",
         "@mui/utils": "5.9.0",
         "@mui/x-data-grid": "5.13.0",
+        "@mui/x-date-pickers": "5.0.0-beta.0",
         "@reduxjs/toolkit": "1.8.3",
         "autosuggest-highlight": "3.3.1",
         "axios": "0.27.2",
@@ -44,6 +44,7 @@
         "react-draft-wysiwyg": "1.14.7",
         "react-hook-form": "7.33.1",
         "react-i18next": "11.18.1",
+        "react-markdown": "^10.1.0",
         "react-popper": "2.3.0",
         "react-redux": "8.0.2",
         "react-router-dom": "6.3.0",
@@ -67,7 +68,6 @@
         "babel-loader": "8.1.0"
     },
     "devDependencies": {
-        "react-scripts": "5.0.1",
         "@babel/core": "7.17.10",
         "@babel/eslint-parser": "7.17.0",
         "@babel/node": "7.17.10",
@@ -97,6 +97,7 @@
         "promise": "8.1.0",
         "react-app-alias": "2.2.0",
         "react-app-rewired": "2.2.1",
+        "react-scripts": "5.0.1",
         "source-map-explorer": "2.5.2",
         "tailwindcss": "3.1.6",
         "typescript": "4.6.4",
