preview template are made

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
               "@history*": ["./src/@history"],
               "@lodash": ["./src/@lodash"],
               "@mock-api": ["./src/@mock-api"],
+              "@models": ["./src/@models"],
               "app/store/*": ["./src/app/store/*"],
               "app/shared-components/*": ["./src/app/shared-components/*"],
               "app/configs/*": ["./src/app/configs/*"],
