--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
         "react-swipeable": "7.0.0",
         "reactflow": "^11.11.4",
         "redux-logger": "4.0.0",
+        "socket.io-client": "^4.8.1",
         "styled-components": "5.3.5",
         "stylis": "4.1.1",
         "stylis-plugin-rtl": "2.1.1",
+        "uuid": "^13.0.0",
         "web-vitals": "2.1.4",
         "yup": "0.32.11"
     },
